--- a/HouseManage/Data.MSSQL/Data.MSSQL.csproj
+++ b/HouseManage/Data.MSSQL/Data.MSSQL.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
     <PackageReference Include="sqlSugarCore" Version="5.0.0.13" />
   </ItemGroup>
 
@@ -20,15 +21,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Model\Data\" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Model\DataBase.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>DataBase.tt</DependentUpon>
     </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Model\Data\" />
   </ItemGroup>
 
 </Project>
