新增 数据库连接数自动关闭配置，

--- a/HouseManage/Data.MSSQL/Data.MSSQL.csproj
+++ b/HouseManage/Data.MSSQL/Data.MSSQL.csproj
@@ -10,6 +10,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="App.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Model\DataBase.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>DataBase.cs</LastGenOutput>
