--- a/HouseManage/HouseManage/appsettings.json
+++ b/HouseManage/HouseManage/appsettings.json
@@ -4,9 +4,5 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "WxInfo": {
-    "AppId": "",
-    "AppSecret": ""
-  }
+  "AllowedHosts": "*"
 }
