--- a/HouseManage/Data.MSSQL/Data.MSSQL.csproj
+++ b/HouseManage/Data.MSSQL/Data.MSSQL.csproj
@@ -35,4 +35,6 @@
     </Compile>
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties app_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
