--- a/HouseManage/Data.MSSQL/App.json
+++ b/HouseManage/Data.MSSQL/App.json
@@ -1,17 +1,17 @@
 {
-  "ConnectionString": "server=114.115.142.34;user id=root;pwd=123456;database=pfhouse_back;SslMode = none;Charset=utf8",
+  "ConnectionString": "server=114.115.142.34;user id=root;pwd=123456;database=pfhouse;SslMode = none;Charset=utf8",
   "WxInfo": {
-    "Domain_Url": "http://55acb256.ngrok.io", //域名
-    "AppId": "wx3731307d4a3b4ac9",
-    "AppSecret": "ac058e53102afe48a60760f2c8f1ccba",
-    "Token": "wxjhkj",
-    "RegPage": "/User/Register",
+    "Domain_Url": "http://www.gxxcwsh.com", //域名
+    "AppId": "wx38f503a0a18bb99b",
+    "AppSecret": "302af50b11d70522225726eadd871590",
+    "Token": "gxxcwx1",
+    "RegPage": "/WeChat/User/Register",
     "Pay": {
       "MchName": "{'1584864331':'普丰物业分公司','1585873541':'普丰房地产分公司'}", //{"商户ID":"商户名称"}
       "Secret": "{'1584864331':'123123123123123','1585873541':'123123123123123'}", //{"商户ID":"商户Secret"}
       "MchID": "{'0':'1584864331','1':'1584864331','2':'1585873541'}", //{"缴费类型":"商户ID"}
       "Pay_url": "https://api.mch.weixin.qq.com/pay/unifiedorder",
-      "CallBackUrl": "http://55acb256.ngrok.io/Orders/PayResult"
+      "CallBackUrl": "http://www.gxxcwsh.com/WeChat/Orders/PayResult"
     }
   }
 }
