--- a/HouseManage/HouseManage/log4net.config
+++ b/HouseManage/HouseManage/log4net.config
@@ -15,7 +15,7 @@
   <!-- 错误 Error.log-->
   <appender name="ErrorLog" type="log4net.Appender.RollingFileAppender">
     <!--目录路径，可以是相对路径或绝对路径-->
-    <param name="File" value="logs\" />
+    <param name="File" value="logs/" />
     <!--文件名，按日期生成文件夹-->
     <param name="DatePattern" value="/yyyy-MM-dd/&quot;Error.log&quot;" />
     <!--记录日志写入文件时，不锁定文本文件，防止多线程时不能写Log,官方说线程非安全-->
@@ -42,7 +42,7 @@
   <!-- 警告 Warn.log-->
   <appender name="WarnLog" type="log4net.Appender.RollingFileAppender">
     <!--目录路径，可以是相对路径或绝对路径-->
-    <param name="File" value="logs\" />
+    <param name="File" value="logs/" />
     <!--文件名，按日期生成文件夹-->
     <param name="DatePattern" value="/yyyy-MM-dd/&quot;Warn.log&quot;" />
     <!--追加到文件-->
@@ -67,7 +67,7 @@
   <!-- 信息 Info.log-->
   <appender name="InfoLog" type="log4net.Appender.RollingFileAppender">
     <!--目录路径，可以是相对路径或绝对路径-->
-    <param name="File" value="logs\" />
+    <param name="File" value="logs/" />
     <!--文件名，按日期生成文件夹-->
     <param name="DatePattern" value="/yyyy-MM-dd/&quot;Info.log&quot;" />
     <!--追加到文件-->
@@ -92,7 +92,7 @@
   <!-- 调试 Debug.log-->
   <appender name="DebugLog" type="log4net.Appender.RollingFileAppender">
     <!--目录路径，可以是相对路径或绝对路径-->
-    <param name="File" value="logs\" />
+    <param name="File" value="logs/" />
     <!--文件名，按日期生成文件夹-->
     <param name="DatePattern" value="/yyyy-MM-dd/&quot;Debug.log&quot;" />
     <!--追加到文件-->
