--- a/HouseManage/HouseManage/log4net.config
+++ b/HouseManage/HouseManage/log4net.config
@@ -57,7 +57,7 @@
     <maxSizeRollBackups value="-1" />
     <!--日志格式-->
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date%n 内容: %message %n%n" />
+      <conversionPattern value="%date:%message %n%n" />
     </layout>
     <filter type="log4net.Filter.LevelRangeFilter">
       <param name="LevelMin" value="WARN" />
@@ -82,7 +82,7 @@
     <maxSizeRollBackups value="-1" />
     <!--日志格式-->
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date%n 内容: %message %n%n" />
+      <conversionPattern value="%date:%message %n%n" />
     </layout>
     <filter type="log4net.Filter.LevelRangeFilter">
       <param name="LevelMin" value="INFO" />
@@ -107,7 +107,7 @@
     <maxSizeRollBackups value="-1" />
     <!--日志格式-->
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date%n 内容: %message %n%n" />
+      <conversionPattern value="%date: %message %n%n" />
     </layout>
     <filter type="log4net.Filter.LevelRangeFilter">
       <param name="LevelMin" value="DEBUG" />
