增加推送消息

--- a/HouseManage/HouseManage/appsettings.json
+++ b/HouseManage/HouseManage/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "securityKey": "Abcde1684613Vasdduhkasd",
+  "msgUrl": {
+    "pay": "http://114.115.142.34/msg/api/msg/pay"
+  }
 }
