--- a/HouseManage/House.IService/House.IService.csproj
+++ b/HouseManage/House.IService/House.IService.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.5.1" />
   </ItemGroup>
 
   <ItemGroup>
