增加推送模板配置

--- a/HouseManage/HouseManage/appsettings.json
+++ b/HouseManage/HouseManage/appsettings.json
@@ -6,7 +6,11 @@
   },
   "AllowedHosts": "*",
   "securityKey": "Abcde1684613Vasdduhkasd",
+  "msgtemp": {
+    "temp": "" //模板ID
+  },
   "msgUrl": {
+    "url": "http://114.115.142.34/msg/api/msg/send", //通用推送接口
     "pay": "http://114.115.142.34/msg/api/msg/pay"
   }
 }
