修改配置文件

--- a/HouseManage/HouseManage/appsettings.json
+++ b/HouseManage/HouseManage/appsettings.json
@@ -10,7 +10,9 @@
     "temp": "" //模板ID
   },
   "msgUrl": {
-    "url": "http://114.115.142.34/msg/api/msg/send", //通用推送接口
-    "pay": "http://114.115.142.34/msg/api/msg/pay"
+    "url": "http://127.0.0.1:8012/api/msg/send", //正式走本地地址
+    "pay": "http://127.0.0.1:8012/api/msg/pay"
+    //"url": "http://114.115.142.34/api/msg/send", //测试走外网地址
+    //"pay": "http://114.115.142.34/api/msg/pay"
   }
 }
