--- a/HouseManage/HouseManage/appsettings.json
+++ b/HouseManage/HouseManage/appsettings.json
@@ -10,6 +10,7 @@
     "temp": "" //模板ID
   },
   "msgUrl": {
+    "sms": "http://127.0.0.1:8012/api/rlmsg/send", //短信的地址
     "url": "http://127.0.0.1:8012/api/msg/send", //正式走本地地址
     "pay": "http://127.0.0.1:8012/api/msg/pay"
     //"url": "http://114.115.142.34/api/msg/send", //测试走外网地址
