修改配置及推送代码

--- a/HouseManage/HouseManage/appsettings.json
+++ b/HouseManage/HouseManage/appsettings.json
@@ -11,9 +11,9 @@
   },
   "msgUrl": {
     "sms": "http://127.0.0.1:8012/api/rlmsg/send", //短信的地址
-    "url": "http://127.0.0.1:8012/api/msg/send", //正式走本地地址
-    "pay": "http://127.0.0.1:8012/api/msg/pay"
-    //"url": "http://114.115.142.34/api/msg/send", //测试走外网地址
-    //"pay": "http://114.115.142.34/api/msg/pay"
+    //"url": "http://127.0.0.1:8012/api/msg/send", //正式走本地地址
+    //"pay": "http://127.0.0.1:8012/api/msg/pay"
+    "url": "http://localhost:58363/api/msg/send", //测试走外网地址
+    "pay": "http://localhost:58363/api/msg/pay"
   }
 }
