修改配置添加短信模板及公用字段。

--- a/HouseManage/HouseManage/appsettings.json
+++ b/HouseManage/HouseManage/appsettings.json
@@ -7,13 +7,16 @@
   "AllowedHosts": "*",
   "securityKey": "Abcde1684613Vasdduhkasd",
   "msgtemp": {
-    "temp": "" //模板ID
+    "temp": "U4lFHGZs-fsfEqQ8Geigv9ujcdLC59fMgeTsCL_PESM", //商户反馈模板ID
+  },
+  "msgsmstemp": {
+    "smstemp": "592030" //短信模板ID：【港西新城】{1}您收到一个{2},详情请登陆微信公众号查看
   },
   "msgUrl": {
     "sms": "http://127.0.0.1:8012/api/rlmsg/send", //短信的地址
-    //"url": "http://127.0.0.1:8012/api/msg/send", //正式走本地地址
-    //"pay": "http://127.0.0.1:8012/api/msg/pay"
-    "url": "http://localhost:58363/api/msg/send", //测试走外网地址
-    "pay": "http://localhost:58363/api/msg/pay"
+    "url": "http://127.0.0.1:8012/api/msg/send", //正式走本地地址
+    "pay": "http://127.0.0.1:8012/api/msg/pay"
+    //"url": "http://localhost:58363/api/msg/send", //测试走外网地址
+    //"pay": "http://localhost:58363/api/msg/pay"
   }
 }
