--- a/HouseManage/HouseManage/appsettings.json
+++ b/HouseManage/HouseManage/appsettings.json
@@ -7,7 +7,7 @@
   "AllowedHosts": "*",
   "securityKey": "Abcde1684613Vasdduhkasd",
   "msgtemp": {
-    "temp": "U4lFHGZs-fsfEqQ8Geigv9ujcdLC59fMgeTsCL_PESM", //商户反馈模板ID
+    "temp": "U4lFHGZs-fsfEqQ8Geigv9ujcdLC59fMgeTsCL_PESM" //商户反馈模板ID
   },
   "msgsmstemp": {
     "smstemp": "592030" //短信模板ID：【港西新城】{1}您收到一个{2},详情请登陆微信公众号查看
